--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,37 @@
 /*  your css code here. If applicable */
+.middle{
+    margin: auto;
+    width: 60%;
+}
+
+.center{
+    text-align: center;
+}
+
+.right{
+    text-align: right;
+}
+
+table{
+    border: 1px solid black;
+    border-spacing: 1px;
+}
+
+td{
+    padding: 1px;
+    border: 1px solid black;
+}
+
+.green{
+    background-color: green;
+}
+
+.blue{
+    background-color: blue;
+}
+#table-1, #table-2, #table-3{
+	width: 100%;
+}
+#table-2 {
+	height: 100px;
+}
